# lib/api-spec/openapi.yaml
@@ -811,9 +811,9 @@ components:
             - technical_control
             - dga
             - dmg
-            - cad
+            - cad_edition
+            - cad_payment
             - financial_control
-            - drh
         departmentId:
           type: ["integer", "null"]
         departmentName:
@@ -1109,9 +1109,9 @@ components:
             - pending_technical_control
             - pending_dga
             - pending_dmg
-            - pending_cad
+            - en_vigueur
+            - pending_cad_payment
             - pending_financial_control
-            - pending_drh
             - approved
             - rejected
         currentValidationRole:
@@ -1303,11 +1303,10 @@ components:
       type: object
       properties:
         vehicleDetails:
-          type: string
+          type: ["string", "null"]
         vehicleCount:
           type: integer
       required:
-        - vehicleDetails
         - vehicleCount
 
     MissionListResponse:
